--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			<input id="create_image" type="button" class="btn btn-primary" value="Створити зображення">
+			<a id="download_naked" href="#" download="naked.png"><input id="create_image" type="button" class="btn btn-primary" value="Створити зображення"></a>
 		</div>
 		<div class="col-md-6">
-			<a id="download_naked" href="#" download="naked.png"><input type="button" class="btn btn-primary" value="Завантажити зображення"></a>
+			<!-- <a id="download_naked" href="#" download="naked.png"><input type="button" class="btn btn-primary" value="Завантажити зображення"></a> -->
 		</div>
 	</div>
 </div>
