--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 							  <option value="5">😦</option>
 							  <option value="6">😡</option>
 							  <option value="7">😠</option>
+							  <option value="8">😁</option>
+							  <option value="9">😣</option>
 						  </select>
 			  		</div>
 			  		<div class="col-md-6">
